@@ -4,6 +4,7 @@ import com.saeal.MrDaebackService.user.domain.User;
 import com.saeal.MrDaebackService.user.domain.UserCard;
 import com.saeal.MrDaebackService.user.dto.request.AddCardRequest;
 import com.saeal.MrDaebackService.user.dto.request.RegisterDto;
+import com.saeal.MrDaebackService.user.dto.request.UpdateUserProfileRequest;
 import com.saeal.MrDaebackService.user.dto.response.UserCardResponseDto;
 import com.saeal.MrDaebackService.user.dto.response.UserResponseDto;
 import com.saeal.MrDaebackService.user.enums.Authority;
@@ -24,7 +25,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -181,7 +181,7 @@ public class UserService {
         List<UserCard> cards = userCardRepository.findByUserId(userId);
         return cards.stream()
                 .map(UserCardResponseDto::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
@@ -199,6 +199,37 @@ public class UserService {
                 .orElseThrow(() -> new IllegalArgumentException("Card not found: " + cardId));
 
         userCardRepository.delete(card);
+    }
+
+    @Transactional
+    public UserResponseDto updateCurrentUserProfile(UpdateUserProfileRequest request) {
+        UUID userId = getCurrentUserId();
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new IllegalArgumentException("User not found: " + userId));
+
+        // 이메일 중복 체크 (다른 사용자가 사용 중인지 확인)
+        if (request.getEmail() != null && !request.getEmail().isBlank()) {
+            if (!request.getEmail().equalsIgnoreCase(user.getEmail())) {
+                if (userRepository.existsByEmailIgnoreCase(request.getEmail())) {
+                    throw new IllegalArgumentException("Email already exists");
+                }
+                user.setEmail(request.getEmail());
+            }
+        }
+
+        // displayName 업데이트
+        if (request.getDisplayName() != null) {
+            user.setDisplayName(request.getDisplayName().isBlank() ? null : request.getDisplayName());
+        }
+
+        // phoneNumber 업데이트
+        if (request.getPhoneNumber() != null && !request.getPhoneNumber().isBlank()) {
+            user.setPhoneNumber(request.getPhoneNumber());
+        }
+
+        user.setUpdatedAt(LocalDateTime.now());
+
+        return UserResponseDto.from(user);
     }
 
 }
